# 5_bar

./: .gitignore  MJMODEL.TXT  MUJOCO_LOG.TXT  README.md  analysis.ipynb  config.toml  five_bar.xml  main.py  pyproject.toml
notebooks/: dynamics.nb  euler_lagrange.ipynb  forward_eqns.nb  min_jerk_traj.ipynb  motion.ipynb  project.ipynb  tau.pkl
specs/: parts.md
src/: __init__.py  controller.py  fk.py  ik.py  trajectory.py  utils.py
test/: __init__.py  circle.py
