[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "5-bar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[mujoco]>=1.3.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "mujoco>=3.10.0",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "scipy>=1.18.0",
    "sympy>=1.14.0",
]
